# tree-sitter-ghactions

./: .gitignore  .rumdl.toml  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: actions.yml  ci.yml  publish.yml
bindings/c/: tree-sitter-ghactions.pc.in
bindings/c/tree_sitter/: tree-sitter-actions.h  tree-sitter-ghactions.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_actions/: __init__.py
bindings/python/tree_sitter_ghactions/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterActionsTests/: TreeSitterActionsTests.swift
bindings/swift/TreeSitterGHActions/: ghactions.h
bindings/swift/TreeSitterGHActionsTests/: TreeSitterGHActionsTests.swift
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: expressions.txt  functions.txt  literals.txt  operators.txt  syntax_errors.txt  variables.txt
