[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-ghactions"
description = "Parser for Github Actions expressions"
version = "0.2.3"
keywords = ["incremental", "parsing", "tree-sitter", "github", "actions"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Robert Muir", email = "rmuir@apache.org" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/rmuir/tree-sitter-ghactions"

[project.optional-dependencies]
core = ["tree-sitter~=0.25"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
